<resources>
    <string name="app_name">ECommerce</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub">SubActivity</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_buy">BuyActivity</string>
    <string name="title_activity_sell">SellActivity</string>
    <string name="title_activity_qr_code">QrCodeActivity</string>
    <string name="title_activity_booked_items">BookedItemsActivity</string>
</resources>
