<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/bg_login"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp"
              tools:context="live.Abhinav.ecommerce.app.RegisterActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_3d"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="..........."

        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textColor="@color/input_login"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/name"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style_line_top_bottom"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:text="Abhinav Anand"
                />

            <EditText
                android:id="@+id/email"
                android:drawableLeft="@drawable/ic_emailid"
                android:drawablePadding="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style_line_bottom"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:text="oct94abhi@gmail.com"/>

            <EditText
                android:id="@+id/password"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_style_line_bottom"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint"
                android:text="123"/>

            <!-- Login Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/layer"

                android:elevation="2dp"
                android:text="@string/btn_register"
                android:textColor="@color/white"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="2"
                android:shadowColor="#000"/>

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
